# weightlifting-competition

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.py
src/: manage.py
src/competition/: admin.py  forms.py  models.py  views.py
src/competition/migrations/: 0001_initial.py  0002_alter_competitor_cnj_attempt_1_and_more.py  0003_alter_competitor_cnj_attempt_1_and_more.py  0004_competitor_position.py
src/competitors/: admin.py  forms.py  models.py  views.py
src/competitors/migrations/: 0001_initial.py
src/static/: mystyle.css
src/templates/: addcompetitors.html  base.html  competition.html  competitors.html  home.html  viewcompetitors.html
src/weightlifting_competition/: asgi.py  settings.py  urls.py  wsgi.py
weightlifting_competition/: competition.py  competitor.py
