[project]
name = "weightlifting-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.7",
    "django-crispy-forms==2.3",
    "python-decouple==3.8",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
